--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="social" class="socialDiv soc">
-    <div id="links">
+    <div id="links" class="socLinks">
         <a href="" id="faceBook"><img src="Img/social/facebook.png" alt="fbImg" class="socialImg"></a>
         <a href="" id="gitHub"><img src="Img/social/github-sign.png" alt="ghImg" class="socialImg"></a>
         <a href="" id="eMail"><img src="Img/social/gmail.png" alt="gmaiImg" class="socialImg"></a>
@@ -34,18 +34,18 @@
             <h1></h1>
         </div>
         <div class="myImg">
-            <img src="" alt="" class="profileImg">
+            <img src="Img/Jakov.jpg" alt="jakov_disicImg" class="profileImg">
         </div>
     </div>
-    <div id="body">
-        <div id="aboutMe">
-            <input type="button" value="About Me" class="aboutMeBtn">
-            <div id="myInfo">
+    <div id="body" class="bodyWrap">
+        <div class="aboutMeDiv">
+            <button id="aboutMe" class="aboutMeBtn">About Me</button>
+            <div class="myInfo">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, consequatur cupiditate? Dolores fugit ipsa non cupiditate odio quas iure officia distinctio perspiciatis nobis nesciunt quibusdam voluptatem dolore nostrum, veritatis voluptas?
             </div>
         </div>
-        <div id="mySkills">
-            <input type="button" value="My Skills" class="aboutMeBtn">
+        <div class="aboutMeDiv">
+            <button id="mySkills" class="aboutMeBtn">My Skills</button>
             <div id="skills">
                 <div class="skill">
                     <p class="skillName"></p>
