--- a/index.html
+++ b/index.html
@@ -30,30 +30,50 @@
    
 </div>
     <div id="header" class="headerDiv">
-        <div class="head1">
-            <h1></h1>
-        </div>
-        <div class="myImg">
+        <div class="myImg" id="profileImgClk">
             <img src="Img/Jakov.jpg" alt="jakov_disicImg" class="profileImg">
+        </div>
+        <div class="head1">
+            <h1>Hi,My name is Jakov Disic and I am Front-End Developer.</h1>
         </div>
     </div>
     <div id="body" class="bodyWrap">
-        <div class="aboutMeDiv">
-            <button id="aboutMe" class="aboutMeBtn">About Me</button>
+        <button id="aboutMe" class="aboutMeBtn">About Me</button>
+        <div class="aboutMeDiv" id="info">
+            <a href=""><img src="" alt="">My CV</a>
             <div class="myInfo">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, consequatur cupiditate? Dolores fugit ipsa non cupiditate odio quas iure officia distinctio perspiciatis nobis nesciunt quibusdam voluptatem dolore nostrum, veritatis voluptas?
             </div>
+            <button id="EduBtn" class="aboutMeBtn">Education</button>
+            <div class="education">
+                
+                <div class="ed1">
+                    <h2 class="edTitle">School Name</h2>
+                    <p class="edTime">From:____ to:______</p>
+                </div>
+            </div>
+            <button id="hobbBtn" class="aboutMeBtn">Hobbie</button>
+            <div class="myHobbies">
+                <h2>My Hobbies:</h2>
+                <p class="hobP">Hobbie</p>
+            </div>
         </div>
-        <div class="aboutMeDiv">
-            <button id="mySkills" class="aboutMeBtn">My Skills</button>
-            <div id="skills">
-                <div class="skill">
-                    <p class="skillName"></p>
-                    <p class="skillPercent"></p>
+        <button id="mySkills" class="aboutMeBtn">My Skills</button>
+        <div class="aboutMeDiv" id="skills">
+            <div class="skill">
+                    <p class="skillName">Html</p>
+                    <p class="skillPercent">100%</p>
                     <img src="" alt="" class="skillImg">
                 </div>
             </div>
-        </div>
+            <button id="myProjects" class="aboutMeBtn">My Projects</button>
+        <div class="aboutMeDiv" id="project">
+            <div class="projects">
+                    <p class="ProjectName">DnD map Creator</p>
+                    <p class="ProjectDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ea, odio veniam necessitatibus itaque laboriosam consequuntur perspiciatis distinctio asperiores facilis accusamus eius aperiam nisi eligendi? Vel deleniti accusamus magni error.</p>
+                    <img src="" alt="" class="projectImg">
+                </div>
+            </div>
         
     </div>
     <script src="JavaScript/js.js"></script>
