--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </div>
             <button id="myProjects" class="aboutMeBtn">My Projects</button>
         <div class="aboutMeDiv" id="project">
+           <img src="Img/social/github-sign.png" alt="ghImg" class="socialImg">You can check my project on<a href="" id="gitHub"> my GitHub!</a>
             <div class="projects">
                     <p class="ProjectName">DnD map Creator</p>
                     <p class="ProjectDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ea, odio veniam necessitatibus itaque laboriosam consequuntur perspiciatis distinctio asperiores facilis accusamus eius aperiam nisi eligendi? Vel deleniti accusamus magni error.</p>
