--- a/index.html
+++ b/index.html
@@ -45,26 +45,25 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, consequatur cupiditate? Dolores fugit ipsa non cupiditate odio quas iure officia distinctio perspiciatis nobis nesciunt quibusdam voluptatem dolore nostrum, veritatis voluptas?
             </div>
             <button id="EduBtn" class="aboutMeBtn">Education</button>
-            <div class="education">
-                
+            <div class="education" id="myEd">
                 <div class="ed1">
                     <h2 class="edTitle">School Name</h2>
                     <p class="edTime">From:____ to:______</p>
                 </div>
             </div>
             <button id="hobbBtn" class="aboutMeBtn">Hobbie</button>
-            <div class="myHobbies">
+            <div class="myHobbies" id="myHob">
                 <h2>My Hobbies:</h2>
                 <p class="hobP">Hobbie</p>
             </div>
         </div>
         <button id="mySkills" class="aboutMeBtn">My Skills</button>
         <div class="aboutMeDiv" id="skills">
-            <div class="skill">
+            <div class="skill"> 
+                    <img src="Img/skill/icons8-css3-30.png" alt="" class="skillImg">
                     <p class="skillName">Html</p>
                     <p class="skillPercent">100%</p>
-                    <img src="" alt="" class="skillImg">
-                </div>
+                   </div>
             </div>
             <button id="myProjects" class="aboutMeBtn">My Projects</button>
         <div class="aboutMeDiv" id="project">
