--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
     <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
-    <div id="social" class="socialDiv soc">
+    <!-- SOCIAL HEADER -->
+<div id="social" class="socialDiv soc">
     <div id="links" class="socLinks">
         <a href="" id="faceBook"><img src="Img/social/facebook.png" alt="fbImg" class="socialImg"></a>
         <a href="" id="gitHub"><img src="Img/social/github-sign.png" alt="ghImg" class="socialImg"></a>
         <a href="" id="eMail"><img src="Img/social/gmail.png" alt="gmaiImg" class="socialImg"></a>
         <a href="" id="linkeIn"><img src="Img/social/linkedin (2).png" alt="liImg" class="socialImg"></a>
     </div>
-   
 </div>
+<!-- HEADER INTRO -->
     <div id="header" class="headerDiv">
         <div class="myImg" id="profileImgClk">
             <img src="Img/Jakov.jpg" alt="jakov_disicImg" class="profileImg">
@@ -37,7 +38,9 @@
             <h1>Hi,My name is Jakov Disic and I am Front-End Developer.</h1>
         </div>
     </div>
+    <!-- BODY -->
     <div id="body" class="bodyWrap">
+        <!-- ABOUT ME SECTION -->
         <button id="aboutMe" class="aboutMeBtn">About Me</button>
         <div class="aboutMeDiv" id="info">
             <a href=""><img src="" alt="">My CV</a>
@@ -57,14 +60,16 @@
                 <p class="hobP">Hobbie</p>
             </div>
         </div>
+        <!-- SKILL SECTION -->
         <button id="mySkills" class="aboutMeBtn">My Skills</button>
-        <div class="aboutMeDiv" id="skills">
+        <div id="skills" class="aboutMeDiv">
             <div class="skill"> 
                     <img src="Img/skill/icons8-css3-30.png" alt="" class="skillImg">
                     <p class="skillName">Html</p>
                     <p class="skillPercent">100%</p>
                    </div>
             </div>
+            <!-- PROJECT SECTION -->
             <button id="myProjects" class="aboutMeBtn">My Projects</button>
         <div class="aboutMeDiv" id="project">
            <img src="Img/social/github-sign.png" alt="ghImg" class="socialImg">You can check my project on<a href="" id="gitHub"> my GitHub!</a>
