--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
 <!-- HEADER INTRO -->
     <div id="header" class="headerDiv">
-        <div class="myImg" id="profileImgClk">
+        <!-- <div class="myImg" id="profileImgClk">
             <img src="Img/Jakov.jpg" alt="jakov_disicImg" class="profileImg">
         </div>
         <div class="head1">
-            <h1>Hi,My name is Jakov Disic and I am Front-End Developer.</h1>
-        </div>
+            <h1></h1>
+        </div> -->
     </div>
     
     <!-- BODY -->
@@ -48,7 +48,7 @@
         <div class="aboutMeDiv" id="info">
             <a href=""><img src="" alt="">My CV</a>
             <div class="myInfo">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, consequatur cupiditate? Dolores fugit ipsa non cupiditate odio quas iure officia distinctio perspiciatis nobis nesciunt quibusdam voluptatem dolore nostrum, veritatis voluptas?
+                
             </div>
             <button id="EduBtn" class="aboutMeBtn">Education</button>
             <div class="education" id="myEd">
